<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_button"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar.Main"
        app:title="@string/app_name">


    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/search_button"
        style="@style/Button"
        android:text="@string/search"
        app:icon="@drawable/search"/>

    <Button
        android:id="@+id/media_button"
        style="@style/Button"
        android:text="@string/media"
        app:icon="@drawable/media"/>

    <Button
        android:id="@+id/settings_button"
        style="@style/Button"
        android:text="@string/settings"
        app:icon="@drawable/settings"/>

</LinearLayout>